--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "basic-ftp": "^5.0.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
+    "formidable": "^3.5.1",
     "jest": "^26.6.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
